fix: alignment and padding

--- a/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
+++ b/src/ui/pages/NotificationDetails/components/ReceiveCredential/ReceiveCredential.scss
@@ -147,7 +147,7 @@
     flex-direction: row;
     justify-content: center;
     position: relative;
-    align-items: anchor-center;
+    align-items: center;
     margin-bottom: 2rem;
 
     .request-user-logo,
@@ -269,10 +269,6 @@
     }
   }
 
-  .page-footer {
-    margin-bottom: 1rem;
-  }
-
   @media screen and (min-width: 250px) and (max-width: 370px) {
     .request-animation-center {
       padding: 1.2rem 0;
@@ -389,10 +385,6 @@
           min-height: 0.892rem;
         }
       }
-    }
-
-    .page-footer {
-      margin-bottom: 0.8rem;
     }
 
     .request-status {
